@@ -11,9 +11,9 @@ Christopher Brannon, Terence Brannon, Roy Bryant, Adam Buchbinder, Hans Bulfone,
 "Category 5", Taylor Campbell, Naruto Canada, Mark Carter, Esteban U. Caamano
 Castro, Semih Cemiloglu, Alex Charlton, Franklin Chen, Joo ChurlSoo,
 Thomas Chust, Gian Paolo Ciceri, Fulvio Ciriaco, Paul Colby, Tobia
-Conforto, John Cowan, Grzegorz Chrupala, James Crippen, John Croisant, Evan Hanson,
-Adhi Hargo, Moritz Heidkamp, Tollef Fog Heen, Drew Hess, Alejandro
-Forero Cuervo, Peter Danenberg, Linh Dang, Brian Denheyer, Sean
+Conforto, Wolfgang Corcoran-Mathe, John Cowan, Grzegorz Chrupala, James Crippen,
+John Croisant, Evan Hanson, Adhi Hargo, Moritz Heidkamp, Tollef Fog Heen, Drew Hess,
+Alejandro Forero Cuervo, Peter Danenberg, Linh Dang, Brian Denheyer, Sean
 D'Epagnier, "dgym", "Don", Chris Double, "Brown Dragon", David
 Dreisigmeyer, Jarod Eells, Petter Egesund, Stephen Eilert, Steve
 Elkins, Daniel B. Faken, Erik Falor, Will Farr, Graham Fawcett, Marc
