@@ -276,7 +276,7 @@ The options recognized by the interpreter are:
 
 ; -setup-mode : When locating extensions, search the current directory first. By default, extensions are located first in the ''extension repository'', where {{chicken-install}} stores compiled extensions and their associated metadata.
 
-; -R  -require-extension NAME : Equivalent to evaluating {{(require-extension NAME)}}.
+; -R  -require-extension NAME : Equivalent to evaluating {{(import NAME)}}. {{NAME}} may be given in list notation, e.g. {{"(srfi 1)"}}.
 
 ; -v  -version : Write the banner with version information to standard output and exit.
 
