@@ -5,6 +5,9 @@
   - Added "fp*+" (fused multiply-add) to "chicken.flonum" module
     (suggested by Christian Himpe).
 
+- Tools
+  - The -R option for csi and csc now accepts list-notation like
+    e.g. (srfi 1).  Fixes #1809, reported by Wolfgang Corcoran-Mathe.
 
 - Build system
   - Default "cc" on BSD systems for building CHICKEN to avoid ABI problems
